fix: page overflow and update hamburger menu

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -129,7 +129,7 @@
     height: 3px;
     background-color: var(--black);
     position: absolute;
-    top: 30%;
+    top: 20%;
     left: 50%;
     transform: translate(-50%, -50%);
     transition: all 200ms ease-in-out;
@@ -139,24 +139,38 @@
     height: 3px;
     background-color: var(--black);
     position: absolute;
-    top: 70%;
+    top: 80%;
     left: 50%;
     transform: translate(-50%, -50%);
     transition: all 200ms ease-in-out;
+    // margin-top: 10px;
+  }
+  &__menu-button-3 {
+    width: 100%;
+    height: 3px;
+    background-color: var(--black);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: opacity 200ms linear;
     // margin-top: 10px;
   }
   &__menu.open-menu > .header__menu-button-1 {
     background-color: var(--white);
     transform: rotate(-45deg) translate(-50%, -50%);
     top: 10%;
-    left: 42%;
+    left: 41%;
   }
-
   &__menu.open-menu > .header__menu-button-2 {
     background-color: var(--white);
     transform: rotate(45deg) translate(-50%, -50%);
     top: 82%;
-    left: 35%;
+    left: 34%;
+  }
+  &__menu.open-menu > .header__menu-button-3 {
+    background-color: var(--purple);
+    opacity: 0;
   }
   .link-hidden {
     display: none;
