--- a/scss/global/_boilerplate.scss
+++ b/scss/global/_boilerplate.scss
@@ -7,6 +7,10 @@
   scroll-behavior: smooth;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   font-family: system-ui, sans-serif;
